# AI_PINN_PROJECT_v03

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup_env.ps1
backend/: AGENTS.md  __init__.py
backend/api/: __init__.py  main.py  schemas.py
backend/core/: __init__.py  active_learning.py  botorch_optimizer.py  fno_model.py  pinn_model.py  uq_filter.py
backend/data/: __init__.py  dataset_manager.py  flywheel.py  lhs_sampler.py  lighttools_runner.py  mock_lt_generator.py
backend/harness/: __init__.py  agents_config.py  drift_detector.py  physical_validator.py
backend/physics/: __init__.py  asm_lut_generator.py  asm_propagator.py  boundary_conditions.py  fingerprint_simulator.py  psf_metrics.py  tmm_calculator.py
backend/training/: __init__.py  collocation_sampler.py  curriculum.py  loss_functions.py  red_flag_detector.py  warm_start.py
configs/: phase_c_full_gpu.yaml  phase_c_small_cpu.yaml  phase_c_warmstart.yaml
data/: fingerprint_417.npy
docs/: udfps_pinn_master_guide_v6.md
experiments/: epoch_comparison.json  evaluation_results.json  fno_distillation.json  inverse_design_10k.json  inverse_design_result.json  lt_comparison.json
frontend/: index.html
notebooks/: 00_project_overview.ipynb
notebooks/helpers/: notebook_utils.py  (+1 more)
scripts/: compare_with_without_lt.py  distill_fno.py  evaluate_phase_c.py  generate_asm_lut.py  preflight_check.py  run_lighttools_batch.py  train_phase_c.py  train_phase_c_resume.py
tests/: test_asm.py  test_interfaces.py  test_loss_functions.py  test_metrics.py  test_pinn_model.py  test_tmm.py
(+22 files in other folders)
