[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udfps-pinn-platform"
version = "0.1.0"
description = "UDFPS BM Optical Inverse Design Automation Platform using PINN"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
